# data_analysis_project

./: README.md  ecommerce.ipynb  home_page_table.csv  last_year_user_data.csv  listing_page_table.csv  payment_confirmation_table.csv  product_page_table.csv  pyproject.toml  userBehavior.ipynb  user_table.csv
