[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["lidanmin.olivia <lidanmin.olivia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
